- Added Danger (danger/danger) for monitoring various PR requirements.
- Enabled organization weekly report emails for all organizations.
- Add S3 filestore backend.
- ``SENTRY_FILESTORE`` deprecated and replaced with ``filestore.backend``
- ``SENTRY_FILESTORE_OPTIONS`` deprecated and replaced with ``filestore.options``
- Add watchOS support for cocoa interface.

API Changes
~~~~~~~~~~~

- Add ``/organizations/{org}/repositories/`` endpoint.
- Add ``/organizations/{org}/repositories/{repo}/commits/`` endpoint.
- Add ``/projects/{org}/{project}/releases/{version}/commits/`` endpoint.

Schema Changes
~~~~~~~~~~~~~~

- Added ``Repository`` model.
- Added ``Commit`` model.
- Added ``CommitAuthor`` model.
- Added ``ReleaseCommit`` model.
- Added index on ``GroupTagValue(project, key, value, last_seen)``.
- Dropped index on ``GroupTagValue(project, key, value)``.

Version 8.9
-----------

- Added support for Elixir.
- Improve performance for bulk deletions of Events and Groups.
- Fix rate limit logic for single organization mode.
- Added ``--no-repair`` flag for ``sentry upgrade`` for large installs.
- Fixed bug with merging counters yielding the wrong values.
- Require password confirmation when enabling/disabling 2fa.
- Collapse repeated frames in the stacktrace UI.
- Added weekly report emails behind feature flag.
- Rebrand Rules as Alerts / Alert Rules.
- Add frequency to Alerts.

Schema Changes
~~~~~~~~~~~~~~

- Added unique index on ``Authenticator(user_id, type)``

Version 8.8
-----------

- Added unique user frequency rule condition.
- Fixed a major performance regression from 8.7 on the ``GroupTagValue`` model.
- Various security fixes related to CSRF and XSS.
- Server side filtering of event ingest.

Schema Changes
~~~~~~~~~~~~~~

- Removed ``HelpPage`` model.
- Added ``OrganizationMember.token`` column.
- Removed ``OrganizationMember.counter`` column.

Version 8.7
-----------

- Removed "Replay Request" feature.